<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Telesto</string>
    <string name="setup">Setup</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="click_next_to_continue">Click \"next\" to continue.</string>
    <string name="eula">EULA</string>
    <string name="eula_text" translatable="false">This experimental software is provided without warranty of any kind, so you use it completely at your own risk!\nRemote controlling an Insight insulin delivery pump with this software will only work if you have paired it with your phone.\nYou must consult your doctor before making any medical decisions or actions based on this or with this software. Always follow the instructions provided by your equipment manufacturer and medical professionals.\nThis is open-source software provided free of charge. Before using the software you are free to inspect the code for bugs. The source code is available at: https://github.com/TebbeUbben/Telesto.\nThis application collects anonymised statistics and error reports and sends them to the developers. Everything else remains in your phone/tablet for maximum privacy protection.\nThere is an interface for third party applications. Applications need your approval before they are able to use it. Consider that these applications might send collected data elsewhere, so check with their respective privacy policies for more details.\nBy accepting this end user license agreement you agree you are legally able to do so and are willing to accept all responsibility for what could happen and that you understand there are no guarantees that using this application is safe or beneficial or that it will be compatible with your device.\nIf you are 18 years old and agree to these terms, then please indicate below:</string>
    <string name="i_understand_and_accept_this">I understand and accept this.</string>
    <string name="search_for_pump">Search for pump</string>
    <string name="put_your_pump_into_pairing_mode">Put your pump into pairing mode and select it in the list below.</string>
    <string name="found_devices">Found devices</string>
    <string name="name_unavailable">Name unavailable</string>
    <string name="progress">Progress</string>
    <string name="compare_codes">Compare codes</string>
    <string name="does_this_code_match_the_one_displayed_on_the_pump">Does this code match the one displayed on your pump?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="establish_connection">Establish connection</string>
    <string name="connection_request">Connection request</string>
    <string name="key_exchange">Key exchange</string>
    <string name="request_code_approval">Request code approval</string>
    <string name="confirm_code_on_phone">Confirm code on phone</string>
    <string name="confirm_code_on_pump">Confirm code on pump</string>
    <string name="pairing_on_application_layer">Pairing on application layer</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_successfully_paired_your_pump">You successfully paired your pump.</string>
    <string name="close">Close</string>
    <string name="status">Status</string>
    <string name="shows_the_latest_known_status_of_your_pump">Shows the latest known status of your pump</string>
    <string name="started">Started</string>
    <string name="stopped">Stopped</string>
    <string name="paused">Paused</string>
    <string name="pump_status_unknown">Pump status unknown</string>
    <string name="cartridge">Cartridge</string>
    <string name="battery">Battery</string>
    <string name="not_inserted">Not inserted</string>
    <string name="operating_mode">Operating mode</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="active_bolus">Active bolus</string>
    <string name="cancel">Cancel</string>
    <string name="active_tbr">Active TBR</string>
    <string name="basal_rate">Basal rate</string>
    <string name="connecting">Connecting…</string>
    <string name="waiting">Waiting…</string>
    <string name="stop_pump">Stop pump?</string>
    <string name="start_pump">Start pump?</string>
    <string name="do_you_really_want_to_stop_your_pump"><![CDATA[Do you really want to <b>stop</b> your pump?]]></string>
    <string name="do_you_really_want_to_start_your_pump"><![CDATA[Do you really want to <b>start</b> your pump?]]></string>
    <string name="cancel_tbr">Cancel TBR?</string>
    <string name="cancel_bolus">Cancel bolus?</string>
    <string name="do_you_really_want_to_cancel_this_bolus"><![CDATA[Do you really want to <b>cancel this bolus</b>?]]></string>
    <string name="standard_bolus">Standard bolus</string>
    <string name="extended_bolus">Extended bolus</string>
    <string name="multiwave_bolus">Multiwave bolus</string>
    <string name="immediate_amount">Immediate amount</string>
    <string name="extended_amount">Extended amount</string>
    <string name="duration">Duration</string>
    <string name="bolus">Bolus</string>
    <string name="the_minimum_amount_is">The minimum amount is %1$.2f U</string>
    <string name="the_maximum_amount_is">The maximum amount is %1$.2f U</string>
    <string name="deliver">Deliver</string>
    <string name="the_duration_must_be_entered_in_format">The duration must be entered in format 00:00.</string>
    <string name="the_step_size_is_15_minutes">The step size is 15 minutes.</string>
    <string name="the_duration_must_not_exceed_24_hours">The duration must not exceed 24 hours.</string>
    <string name="the_duration_must_not_be_0">The duration must not be 0.</string>
    <string name="the_field_must_not_be_empty">The field must not be empty.</string>
    <string name="invalid_input">Invalid input</string>
    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait…</string>
    <string name="bolus_type_not_available">Bolus type not available</string>
    <string name="deliver_standard_bolus">Deliver standard bolus?</string>
    <string name="deliver_extended_bolus">Deliver extended bolus?</string>
    <string name="deliver_multiwave_bolus">Deliver multiwave bolus?</string>
    <string name="do_you_really_want_to_deliver_immediately"><![CDATA[Do you really want to deliver <b>%1$.2f U</b> immediately?]]></string>
    <string name="do_you_really_want_to_deliver_extended"><![CDATA[Do you really want to deliver <b>%1$.2f U</b> in <b>%2$s h</b>?]]></string>
    <string name="do_you_really_want_to_deliver_immediately_and_extended"><![CDATA[Do you really want to deliver <b>%1$.2f U</b> immediately and <b>%2$.2f U</b> in <b>%3$s h</b>?]]></string>
    <string name="set_tbr">Set TBR</string>
    <string name="percentage">Percentage</string>
    <string name="the_step_size_is_10">The step size is 10%.</string>
    <string name="the_maximum_value_is_250">The maximum value ist 250%.</string>
    <string name="the_value_must_not_be_100">The value must not be 100%.</string>
    <string name="set_tbr_dialog">Set TBR?</string>
    <string name="do_you_really_want_to_run_your_basal_rate_at_for"><![CDATA[Do you really want to run your basal rate at <b>%1$d %%</b> for <b>%2$s h</b>?]]></string>
    <string name="tbr">TBR</string>
    <string name="pump_alert">Pump alert</string>
    <string name="mute">Mute</string>
    <string name="confirm">Confirm</string>
    <string name="critical_error">Critical error</string>
    <string name="critical_error_description">Will notify you when a critical error occurs and new pairing is required</string>
    <string name="critical_error_occurred">A critical error occurred. A new pairing is required.</string>
    <string name="alert_ringtone">Alert ringtone</string>
    <string name="alert_ringtone_summary">Ringtone used for pump alerts</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="disconnection_delay">Disconnection delay [ms]</string>
    <string name="disconnection_delay_summary">The time to wait before closing the connection, the minimum value is 1000 milliseconds.</string>
    <string name="wait_before_retry_title">Wait after each failed connection attempt</string>
    <string name="wait_before_retry_summary">Wait some time after each failed connection attempt to improve connection stability on some devices</string>
    <string name="maximum_waiting_time">Maximum waiting time [ms]</string>
    <string name="maximum_waiting_time_summary">The maximum duration to wait after each failed connection attempt, the maximum value is 60000 milliseconds.</string>
    <string name="minimum_waiting_time">Minimum waiting time [ms]</string>
    <string name="minimum_waiting_time_summary">The minimum duration to wait after each failed connection attempt, the maximum value is 30000 milliseconds.</string>
    <string name="allow_socket_resets">Allow socket resets</string>
    <string name="allow_socket_resets_summary">Allow resetting the bluetooth socket to improve connection stability on some devices</string>
    <string name="attempts_per_socket">Attempts per socket</string>
    <string name="attempts_per_socket_summary">Try to connect n times with the same socket before it will be discarded</string>
    <string name="allow_adapter_resets">Allow adapter resets</string>
    <string name="allow_adapter_resets_summary">Allow to re-enable the bluetooth adapter to improve connection stability on some devices</string>
    <string name="attempts_per_bluetooth_session">Attempts per bluetooth session</string>
    <string name="attempts_per_bluetooth_session_summary">Attempts to take before the bluetooth adapter will be re-enabled</string>
    <string name="settings">Settings</string>
    <string name="delete_pairing">Delete pairing</string>
    <string name="delete_pairing_dialog_title">Delete pairing?</string>
    <string name="do_you_really_want_to_delete_the_pairing"><![CDATA[Do you really want to <b>delete</b> the <b>pairing</b>?]]></string>
    <string name="last_time_connected">Last time connected: %1$s</string>

    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>

    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
</resources>
