<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/bolus">
        <menu>
            <group>
                <item android:id="@+id/nav_standard_bolus"
                    android:icon="@drawable/ic_standard_bolus"
                    android:title="@string/standard_bolus" />
                <item android:id="@+id/nav_extended_bolus"
                    android:icon="@drawable/ic_extended_bolus"
                    android:title="@string/extended_bolus" />
                <item android:id="@+id/nav_multiwave_bolus"
                    android:icon="@drawable/ic_multiwave_bolus"
                    android:title="@string/multiwave_bolus" />
            </group>
        </menu>
    </item>
    <item android:title="@string/basal_rate">
        <menu>
            <group>
                <item android:id="@+id/nav_tbr"
                    android:icon="@drawable/ic_tbr"
                    android:title="@string/tbr" />
            </group>
        </menu>
    </item>
</menu>